Inclusion of Controller, Use Case and Respository for route to get Partner by Point
